--- a/pic18f47q10-cnano-tmr0-8bit-cmp-int-mcc.X/nbproject/Makefile-genesis.properties
+++ b/pic18f47q10-cnano-tmr0-8bit-cmp-int-mcc.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Thu Apr 02 14:27:09 EEST 2020
+#Thu Apr 23 18:16:09 EEST 2020
 free.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=f87389d82b4b299d292110931953ebdc
 conf.ids=free,pro
 free.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v2.10\\bin
 configurations-xml=c62492c1e0d44f33153f0525918bde80
-free.Pack.dfplocation=C\:\\Users\\M17319\\.mchp_packs\\Microchip\\PIC18F-Q_DFP\\1.3.89
+free.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC18F-Q_DFP\\1.3.89
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
 pro.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=f87389d82b4b299d292110931953ebdc
-pro.Pack.dfplocation=C\:\\Users\\M17319\\.mchp_packs\\Microchip\\PIC18F-Q_DFP\\1.3.89
+pro.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC18F-Q_DFP\\1.3.89
 free.languagetoolchain.version=2.10
 pro.languagetoolchain.version=2.10
 pro.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v2.10\\bin
